fixed spacing between testimonial and place

--- a/css/styles_mediaOver600.css
+++ b/css/styles_mediaOver600.css
@@ -72,7 +72,7 @@
         font-style: Italic;
         font-size: 14px;    
     }
-    .testimonials p {
+    .testimonial-instance {
         padding-top: 3em;
         padding-bottom: 0;
     }
